--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -34,5 +34,10 @@ jobs:
           path: webapp
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
+      - name: Create DEFINITIONS file
+        shell: bash
+        run: |
+          echo shinylive\nbslib\nR.matlab\n > DESCRIPTION
+          cat DESCRIPTION
       - name: Install R Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
