--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -32,12 +32,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: webapp
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v2
-      - name: Create DEFINITIONS file
-        shell: bash
-        run: |
-          echo shinylive\nbslib\nR.matlab\n > DESCRIPTION
-          cat DESCRIPTION
-      - name: Install R Dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Install dependencies
+        shell: Rscript {0}
+        run: viewer/src/install.R
