Try running install .R script.

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -33,5 +33,7 @@ jobs:
         with:
           path: webapp
       - name: Install dependencies
-        shell: Rscript {0}
-        run: viewer/src/install.R
+        shell: shell
+        run: |
+          pwd
+          /usr/bin/Rscript viewer/src/install.R
