Try running install .R script.

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           path: webapp
       - name: Install dependencies
-        shell: shell
+        shell: bash
         run: |
           pwd
           /usr/bin/Rscript viewer/src/install.R
