Install libarchive for shinylive.

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: webapp
+      - name: Install libarchive-dev
+        run: sudo apt-get install -y libarchive-dev
       - name: Install dependencies
         shell: bash
         run: |
