--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Checkout Web App
         uses: actions/checkout@v4
         with:
+          repository: optical-irradiance-contour-webapp
           path: webapp
       - name: Install libarchive-dev and libcurl4-openssl-dev
         run: sudo apt-get install -y libarchive-dev libcurl4-openssl-dev
