--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -33,21 +33,23 @@ jobs:
         with:
           repository: optical-irradiance-contour-webapp
           path: webapp
+          token: ${{ secrets.PUSH_WEB_APP_TOKEN }}
       - name: Install libarchive-dev and libcurl4-openssl-dev
         run: sudo apt-get install -y libarchive-dev libcurl4-openssl-dev
-      - name: Install dependencies
-        shell: bash
-        run: |
-          sudo /usr/bin/Rscript viewer/src/install.R
-      - name: Build web application
-        shell: Rscript {0}
-        run: shinylive::export(appdir = "viewer/src", destdir = "webapp")
+      # - name: Install dependencies
+      #  shell: bash
+      #  run: |
+      #    sudo /usr/bin/Rscript viewer/src/install.R
+      #- name: Build web application
+      #  shell: Rscript {0}
+      #  run: shinylive::export(appdir = "viewer/src", destdir = "webapp")
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "actions"
       - name: Commit changes and push to website
         shell: bash
         run: |
           cd webapp
+          echo "something" > index.html
           git status
           git add .
           git commit -m "Latest changes for web application."
