--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -34,6 +34,11 @@ jobs:
           repository: BrainStimulation/optical-irradiance-contour-webapp
           path: webapp
           token: ${{ secrets.PUSH_WEB_APP_TOKEN }}
+      - name: Checkout Data
+        uses: actions/checkout@v4
+        with:
+          repository: BrainStimulation/optical-irradiance-contour-data
+          path: data
       - name: Install libarchive-dev and libcurl4-openssl-dev
         run: sudo apt-get install -y libarchive-dev libcurl4-openssl-dev
       - name: Install dependencies
@@ -45,6 +50,12 @@ jobs:
         run: shinylive::export(appdir = "viewer/src", destdir = "webapp")
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "actions"
+      - name: Add data files
+        shell: bash
+        run: |
+          mkdir -p webapp/data
+          cp data/grey.mat webapp/data/
+          cp data/white.mat webapp/data/
       - name: Commit changes and push to website
         shell: bash
         run: |
