--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -55,7 +55,8 @@ jobs:
         shell: bash
         run: |
           cd webapp
-          git add .
-          git commit -m "Latest changes for web application."
-          git push origin main
-          
+          if [ -n "$(git status --porcelain)" ]; then
+            git add .
+            git commit -m "Latest changes for web application."
+            git push origin main
+          fi    
