--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          sudo apt install r-base r-base-dev -y
+          sudo apt update && sudo apt install r-base r-base-dev -y
+          sudo /usr/bin/Rscript --version
           sudo /usr/bin/Rscript viewer/src/install.R
       - name: Build web application
         shell: Rscript {0}
