--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -40,11 +40,14 @@ jobs:
         shell: bash
         run: |
           sudo apt update && sudo apt install r-base r-base-dev -y
-          sudo /usr/bin/Rscript --version
           sudo /usr/bin/Rscript viewer/src/install.R
+          sudo /usr/bin/Rscript --version
       - name: Build web application
         shell: Rscript {0}
-        run: shinylive::export(appdir = "viewer/src", destdir = "webapp")
+        run: |
+          shinylive::assets_version()
+          unlink("webapp", recursive = TRUE)
+          shinylive::export(appdir = "viewer/src", destdir = "webapp", assets_version = "0.10.6")
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "actions"
       - name: Add data files
