--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -42,11 +42,15 @@ jobs:
           sudo apt update && sudo apt install r-base r-base-dev -y
           sudo /usr/bin/Rscript viewer/src/install.R
           sudo /usr/bin/Rscript --version
+      - name: Clean destination
+        shell: bash
+        run: |
+          # Clean out the old files from the webapp repo, but NOT the .git folder
+          find webapp -mindepth 1 -not -path 'webapp/.git*' -delete
       - name: Build web application
         shell: Rscript {0}
         run: |
           shinylive::assets_version()
-          unlink("webapp", recursive = TRUE)
           shinylive::export(appdir = "viewer/src", destdir = "webapp", assets_version = "0.10.6")
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "actions"
