--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -37,6 +37,8 @@ jobs:
           token: ${{ secrets.PUSH_WEB_APP_TOKEN }}
 
       - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
           
       - name: Install dependencies
         shell: bash
