--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -36,6 +36,11 @@ jobs:
           path: webapp
           token: ${{ secrets.PUSH_WEB_APP_TOKEN }}
 
+      - name: Generate Version Info
+        run: |
+          echo "BUILD_DATE=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
@@ -50,13 +55,19 @@ jobs:
         run: |
           # Clean out the old files from the webapp repo, but NOT the .git folder
           find webapp -mindepth 1 -not -path 'webapp/.git*' -delete
+          
       - name: Build web application
+        env:
+          BUILD_DATE: ${{ env.BUILD_DATE }}
+          GIT_SHA: ${{ env.GIT_SHA }}
         shell: Rscript {0}
         run: |
           shinylive::assets_version()
           shinylive::export(appdir = "viewer/src", destdir = "webapp", assets_version = "0.10.6")
+          
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "actions"
+      
       - name: Add data files
         shell: bash
         run: |
@@ -64,6 +75,7 @@ jobs:
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963453" --output webapp/data/grey.mat -s &
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963456" --output webapp/data/white.mat -s &
           wait
+          
       - name: Commit changes and push to website
         shell: bash
         run: |
