--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Generate Version Info
         run: |
-          echo "BUILD_DATE=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
-          echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          # Create a JSON file in the app's source directory
+          echo "{\"build_date\": \"$(date -u +'%Y-%m-%d %T+%Z')\", \"git_sha\": \"$(echo ${{ github.sha }} | cut -c1-7)\"}" > version.json
           
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::shinylive, any::shiny, any::bslib, any::R.matlab, 
+          extra-packages: any::shinylive, any::shiny, any::bslib, any::jsonlite, any::R.matlab
       
       - name: Clean destination
         shell: bash
@@ -57,9 +57,6 @@ jobs:
           find webapp -mindepth 1 -not -path 'webapp/.git*' -delete
           
       - name: Build web application
-        env:
-          BUILD_DATE: ${{ env.BUILD_DATE }}
-          GIT_SHA: ${{ env.GIT_SHA }}
         shell: Rscript {0}
         run: |
           shinylive::assets_version()
