Get Jekyll to copy over data files.

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -72,7 +72,8 @@ jobs:
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963453" --output webapp/data/grey.mat -s &
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963456" --output webapp/data/white.mat -s &
           wait
-          cp version.json webapp/version.json
+          cp version.json webapp/data/version.json
+          printf "include:\n  - data\n" > webapp/_config.yml
           
       - name: Commit changes and push to website
         shell: bash
