--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -69,12 +69,13 @@ jobs:
         shell: bash
         run: |
           mkdir -p webapp/data
+          mkdir -p webapp/.github/workflows
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963453" --output webapp/data/grey.mat -s &
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963456" --output webapp/data/white.mat -s &
           wait
           cp version.json webapp/data/version.json
-          printf 'include: ["data/grey.mat", "data/white.mat", "data/version.json"]\n' > webapp/_config.yml
-          
+          cp src/github/deploy-pages.yml webapp/.github/workflows
+
       - name: Commit changes and push to website
         shell: bash
         run: |
