Correct path to workflow script for deploying to pages.

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -74,7 +74,7 @@ jobs:
           curl -X GET -L "https://api.figshare.com/v2/file/download/46963456" --output webapp/data/white.mat -s &
           wait
           cp version.json webapp/data/version.json
-          cp src/github/deploy-pages.yml webapp/.github/workflows
+          cp viewer/src/github/deploy-pages.yml webapp/.github/workflows
 
       - name: Commit changes and push to website
         shell: bash
