--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -70,8 +70,7 @@ jobs:
         run: |
           mkdir -p webapp/data
           mkdir -p webapp/.github/workflows
-          curl -X GET -L "https://api.figshare.com/v2/file/download/46963453" --output webapp/data/grey.mat -s &
-          curl -X GET -L "https://api.figshare.com/v2/file/download/46963456" --output webapp/data/white.mat -s &
+          curl -X GET -L "https://api.figshare.com/v2/file/download/61413808" --output webapp/data/absorptionData.mat -s &
           wait
           cp version.json webapp/data/version.json
 
